fix the resposive issue for banner section and adding our results section

--- a/1-index.html
+++ b/1-index.html
@@ -43,4 +43,41 @@
             <p>From classical symphonies to modern pop hits, music has always played a significant role in human expression.</p>
         </section>
     </div> <!-- End of Hero Wrapper -->
-<!-- End of Hero Wrapper -->
+
+    <!-- What We Do Section -->
+    <section class="what-we-do">
+        <div class="title">
+            <h1>What We Do</h1>
+            <p>
+                At our core, we believe that music has the power to transform lives. We create immersive,
+                high-quality audio experiences designed to elevate your connection with sound.            
+            </p>
+        </div>
+
+        <!-- Section Elements -->
+        <div class="section-elements">
+            <div class="sound-frecuency">
+                <img src="./images/sound-frecuency.png" alt="sound wave images">
+                <h3>Listen</h3>
+                <p>Lorem ipsum dolor si</p>
+            </div>
+            <div class="video">
+                <img src="./images/video.png" alt="video player images">
+                <h3>Watch</h3>
+                <p>Lorem ipsum dolor si</p>
+            </div>
+            <div class="music-note">
+                <img src="./images/music.png" alt="music note images">
+                <h3>Download</h3>
+                <p>Lorem ipsum dolor si</p>
+            </div>
+            <div class="hearing">
+                <img src="./images/hearing.png" alt="hearing images">
+                <h3>Hearing</h3>
+                <p>Lorem ipsum dolor si</p>
+            </div>
+        </div> <!-- End of Section Elements -->
+    </section>
+</main>
+</body>
+</html>
