update file and adding autocomplete form for 3 & 4

--- a/3-index.html
+++ b/3-index.html
@@ -101,9 +101,9 @@
                     <h1>Contact us</h1>
                 </div>
              <form class="contact-Field">
-                    <input type="text" name="Name"  id="Name" placeholder="Name">
-                    <input type="text" name="Email" id="Email" placeholder="Email">
-                    <input type="text" name="Your message" id="Your message" placeholder="Your Message">
+                <input type="text" name="Name"  id="Name" placeholder="Name" autocomplete="name">
+                <input type="text" name="Email" id="Email" placeholder="Email" autocomplete="email">
+                <input type="text" name="Your message" id="Your message" placeholder="Your Message" autocomplete="off">
                 <div class="contact-button">
                     <button>CALL TO ACTION</button>
                 </div>
